// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeeperValidators register multiple validators succeeds 1`] = `
Object {
  "calldataByteLength": 3620,
  "gasUsed": 710692,
}
`;

exports[`KeeperValidators register multiple validators succeeds 2`] = `
Object {
  "calldataByteLength": 3620,
  "gasUsed": 619110,
}
`;

exports[`KeeperValidators register single validator succeeds 1`] = `
Object {
  "calldataByteLength": 1412,
  "gasUsed": 347386,
}
`;

exports[`KeeperValidators register single validator succeeds 2`] = `
Object {
  "calldataByteLength": 1412,
  "gasUsed": 293915,
}
`;

exports[`KeeperValidators set validators rewards oracles succeeds 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 32144,
}
`;

exports[`KeeperValidators update exit signatures succeeds 1`] = `
Object {
  "calldataByteLength": 996,
  "gasUsed": 126111,
}
`;
